syntax = "proto3";

option csharp_namespace = "Services.Product.Grpc";

package product;

service ProductRPC {
  rpc GetProductById (GetProductByIdRequest) returns (ProductReply);
}

// The request message containing the user's name.
message GetProductByIdRequest {
  string id = 1;
}

// The response message containing the greetings.
message ProductReply {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}
